--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -44,6 +44,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: build
+          path: ./build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
