--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,8 +31,7 @@
     "lint:prettier": "prettier . --check",
     "fix": "run-s fix:eslint fix:prettier",
     "fix:eslint": "yarn lint:eslint --fix",
-    "fix:prettier": "yarn lint:prettier --write",
-    "prepare": "husky install"
+    "fix:prettier": "yarn lint:prettier --write"
   },
   "browserslist": {
     "production": [
@@ -57,8 +56,15 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.4.0"
+    "prettier": "^2.4.0",
+    "simple-git-hooks": "^2.6.1"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*": "fix"
   }
 }
