--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,15 +56,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "lint-staged": "^11.1.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.4.0",
-    "simple-git-hooks": "^2.6.1"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*": "fix"
+    "prettier": "^2.4.0"
   }
 }
