--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,14 +1,19 @@
-name: CD
+name: Frontend CD
 
 on:
   push:
     branches:
       - main
+    pathes:
+      - frontend
 
 jobs:
   build:
-    name: Build
+    name: CD
     runs-on: ubuntu-latest
+    default:
+      run:
+        working-directory: frontend
     steps:
       - uses: actions/checkout@v2
 
@@ -35,19 +40,7 @@ jobs:
           name: build
           path: ./build
 
-  deploy-gh-pages:
-    name: Deploy gh-pages
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download build artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: build
-          path: ./build
-
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+        uses: google-github-actions/deploy-appengine@main
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+          credentials: ${{ secrets.GCP_SA_KEY }}
