--- a/.github/workflows/frontend_cd.yml
+++ b/.github/workflows/frontend_cd.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     name: CD
     runs-on: ubuntu-latest
-    default:
+    defaults:
       run:
         working-directory: frontend
     steps:
