--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -9,7 +9,7 @@ jobs:
   ci:
     name: CI
     runs-on: ubuntu-latest
-    default:
+    defaults:
       run:
         working-directory: frontend
     steps:
