--- a/.github/workflows/backend_blog_ci.yml
+++ b/.github/workflows/backend_blog_ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: frontend
+        working-directory: backend/blog
     steps:
       - uses: actions/checkout@v2
 
