--- a/.github/workflows/frontend_web_cd.yml
+++ b/.github/workflows/frontend_web_cd.yml
@@ -1,4 +1,4 @@
-name: Frontend CD
+name: Frontend Web CD
 
 on:
   workflow_dispatch:
@@ -6,7 +6,7 @@ on:
     branches:
       - main
     paths:
-      - frontend/**
+      - frontend/web/**
 
 jobs:
   build:
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: frontend
+        working-directory: frontend/web
     steps:
       - uses: actions/checkout@v2
 
@@ -39,10 +39,10 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: build
-          path: frontend/build
+          path: frontend/web/build
 
       - name: Deploy
         uses: google-github-actions/deploy-appengine@main
         with:
           credentials: ${{ secrets.GCP_SA_KEY }}
-          working_directory: frontend
+          working_directory: frontend/web
